[project]
name = "tests-lambda-functions"
version = "0.1.0"
description = "Lambda functions tests"
authors = [
    {name = "lalithanagarur",email = "lalitha.nagarur3@justice.gov.uk"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "SQLAlchemy==2.0.39",
  "python-tds==1.16.0",
  "pymssql==2.3.2",
  "boto3==1.42.19",
  "pandas==2.3.3",
  "awswrangler==3.14.0",
  "pytest==9.0.2",
  "pytest-mock==3.15.1",
  "moto==5.1.19",
]
